--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -14,75 +14,88 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/eventsummary">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/eventname"
-                android:textColor="#000000"
                 android:layout_gravity="center"
                 android:layout_centerHorizontal="true"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:text="EventX"
                 />
-            <Button
+            <TextView
                 android:layout_width="wrap_content"
                 android:text="Leave"
+                android:gravity="center_vertical"
+                android:paddingEnd="10sp"
                 android:id="@+id/eventjoin"
-                android:layout_alignParentRight="true"
+                android:drawableStart="@drawable/baseline_remove_circle_outline_24"
+                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/eventname"
+                android:layout_alignTop="@+id/desctitle"
+                android:layout_alignBottom="@+id/desctitle"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Event Summary"
+                android:layout_margin="10sp"
                 android:gravity="center"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorpurple"
-                android:layout_alignTop="@+id/eventjoin"
-                android:layout_alignBottom="@+id/eventjoin"
                 android:layout_below="@+id/eventname"
                 android:id="@+id/desctitle"
                 android:layout_marginLeft="5dp"
-                />
+                tools:ignore="RtlSymmetry" />
+
             <TextView
+                android:drawableStart="@drawable/baseline_access_time_24"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/desctitle"
-                android:layout_marginLeft="5dp"
-                android:textSize="20sp"
-                android:textColor="#000000"
-                android:text="Time: 11/1/2020"
+                android:textSize="18sp"
+                android:layout_margin="10sp"
+                android:paddingStart="10sp"
+                android:paddingEnd="10sp"
+                android:gravity="center_vertical"
+                android:text="Time:"
                 android:id="@+id/eventtime"/>
-            <ImageButton
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_alignParentRight="false"
-                android:background="@drawable/edit_foreground"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/baseline_history_edu_24"
+                android:layout_alignTop="@+id/eventtime"
                 android:layout_alignBottom="@+id/eventtime"
+                android:paddingEnd="10sp"
                 android:id="@+id/edit"
-                android:layout_alignRight="@+id/eventtime"
-                android:text="edit"/>
+                android:layout_alignStart="@+id/eventjoin"
+                android:text="Edit"/>
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableStart="@drawable/baseline_location_on_24"
                 android:layout_below="@+id/eventtime"
-                android:layout_marginLeft="5dp"
-                android:textColor="#000000"
-                android:text="Location: 123 Parkway, San Jose"
-                android:textSize="20sp"
+                android:layout_margin="10sp"
+                android:paddingStart="10sp"
+                android:textSize="18sp"
+                android:text="Location:"
+                android:gravity="center_vertical"
                 android:id="@+id/eventlocation"/>
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableStart="@drawable/baseline_description_24"
                 android:layout_below="@+id/eventlocation"
-                android:layout_marginLeft="5dp"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:text="About this event:"
+                android:layout_marginTop="10sp"
+                android:layout_marginLeft="10sp"
+                android:paddingStart="10sp"
+                android:textSize="18sp"
+                android:paddingEnd="10sp"
+                android:gravity="center_vertical"
+                android:text="Description: "
                 android:id="@+id/aboutevent"/>
 
             <LinearLayout
@@ -94,12 +107,13 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:textColor="#000000"
-                android:textSize="20sp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:paddingEnd="10sp"
+                android:paddingStart="34sp"
+                android:textSize="18sp"
                 android:maxLines="5"
-                android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
+                android:text="scription is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
                 android:id="@+id/desc"/>
 
             <Button
@@ -121,7 +135,7 @@
                 android:text="Chat"
                 android:id="@+id/chat"
                 android:src="@drawable/message"
-                android:background="@drawable/chat_bubble_received"
+                android:background="@color/colorPrimaryDark"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/descblock"/>
 
