--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -16,17 +16,16 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:textColor="#000000"
         android:textStyle="bold"
         android:text="GroupX"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5sp"
+        android:drawableStart="@drawable/baseline_description_24"
+        android:paddingLeft="10sp"
         android:text="Group Description"
-        android:textSize="25sp"
-        android:textColor="@color/colorpurple"
+        android:textSize="20sp"
         android:textStyle="bold"/>
     <ScrollView
         android:layout_width="match_parent"
@@ -41,10 +40,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#000000"
-            android:paddingLeft="5sp"
+            android:textSize="18sp"
+            android:paddingLeft="15sp"
             android:paddingTop="5sp"
+            android:paddingRight="15sp"
+            android:layout_marginStart="10sp"
             android:maxLines="5"
             android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
             android:id="@+id/groupDescription"/>
@@ -66,16 +66,28 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:paddingStart="10sp"
         android:paddingLeft="5sp"
-        android:textColor="@color/colorpurple"
+        android:drawableStart="@drawable/baseline_event_24"
         android:text="All Listed Events"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/createEvent"
-        android:text="Create Event"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_height="40sp"
+            android:id="@+id/createEvent"
+            android:drawableStart="@drawable/baseline_add_task_24"
+            android:drawablePadding="5sp"
+            android:paddingRight="10sp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:text="Create Event"/>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventList"
