--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -56,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/desctitle"
+                android:drawablePadding="5sp"
                 android:textSize="18sp"
                 android:layout_margin="10sp"
                 android:paddingStart="10sp"
@@ -69,7 +70,6 @@
                 android:drawableStart="@drawable/baseline_history_edu_24"
                 android:layout_alignTop="@+id/eventtime"
                 android:layout_alignBottom="@+id/eventtime"
-                android:paddingEnd="10sp"
                 android:id="@+id/edit"
                 android:layout_alignStart="@+id/eventjoin"
                 android:text="Edit"/>
@@ -80,6 +80,8 @@
                 android:layout_below="@+id/eventtime"
                 android:layout_margin="10sp"
                 android:paddingStart="10sp"
+                android:paddingEnd="10sp"
+                android:drawablePadding="5sp"
                 android:textSize="18sp"
                 android:text="Location:"
                 android:gravity="center_vertical"
@@ -93,6 +95,7 @@
                 android:layout_marginLeft="10sp"
                 android:paddingStart="10sp"
                 android:textSize="18sp"
+                android:drawablePadding="5sp"
                 android:paddingEnd="10sp"
                 android:gravity="center_vertical"
                 android:text="Description: "
@@ -110,7 +113,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:paddingEnd="10sp"
-                android:paddingStart="34sp"
+                android:paddingStart="38sp"
                 android:textSize="18sp"
                 android:maxLines="5"
                 android:text="scription is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
