--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -111,8 +111,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:paddingEnd="10sp"
+                android:layout_marginStart="10sp"
+                android:paddingEnd="15sp"
                 android:paddingStart="38sp"
                 android:textSize="18sp"
                 android:maxLines="5"
@@ -123,7 +123,7 @@
                 android:id="@+id/btShowmore"
                 android:layout_width="match_parent"
                 android:text="Show more..."
-                android:layout_marginRight="10sp"
+                android:layout_marginRight="20sp"
                 android:textAllCaps="false"
                 android:gravity="right"
                 android:textColor="@android:color/holo_blue_light"
