--- a/app/src/main/res/layout/item_message_sent.xml
+++ b/app/src/main/res/layout/item_message_sent.xml
@@ -7,38 +7,27 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:paddingTop="8dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_message_profilest"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_alignParentEnd="true"
-        app:civ_border_color="@color/imageBorderColor"
-        app:civ_border_width="2dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintRight_toRightOf="parent"/>
+<TextView
+    android:id="@+id/text_message_body"
+    android:text="hello, hello!"
+    android:background="@drawable/chat_bubble_sent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:maxWidth="240dp"
+    android:padding="8dp"
+    android:textColor="#ffffff"
+    android:layout_marginRight="8dp"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_message_body"
-        android:text=""
-        android:background="@drawable/chat_bubble_sent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxWidth="240dp"
-        android:padding="8dp"
-        android:textColor="#ffffff"
-        android:layout_marginRight="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/image_message_profilest"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/text_message_time"
-        android:text="11:40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
-        app:layout_constraintRight_toLeftOf="@+id/text_message_body" />
+<TextView
+    android:id="@+id/text_message_time"
+    android:text="11:40"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="10sp"
+    android:layout_marginRight="4dp"
+    app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
+    app:layout_constraintRight_toLeftOf="@+id/text_message_body" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
