--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,6 @@
         android:icon="@drawable/ic_action_groups"/>
     <item
         android:id="@+id/info"
-        android:title="Info"
+        android:title="Settings"
         android:icon="@drawable/ic_action_info"/>
 </menu>
