--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,11 +37,11 @@
             android:hint="Email"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
             android:layout_marginTop="10dp"
-            android:hint="password"/>
+            android:hint="Password" />
 
         <Button
             android:layout_width="match_parent"
