--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -34,7 +34,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_alignParentRight="true"
-                app:civ_border_color="@color/imageBorderColor"
+                app:civ_border_color="@color/colorPrimary"
                 app:civ_border_width="2dp" />
 
         </RelativeLayout>
