Add MyService for checking account existence

--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Initial Password"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPassword" />
 
             </LinearLayout>
 
