--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="Password" />
+            android:hint="Password"
+            android:inputType="textPassword" />
 
         <Button
             android:layout_width="match_parent"
@@ -52,6 +53,14 @@
             android:layout_marginTop="10dp"
             android:textColor="#fff"/>
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="50dp"
+            android:src="@mipmap/ic_launcher_yf_round"
+            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_width="2dp" />
 
     </LinearLayout>
 
