--- a/app/src/main/res/layout/groups_fragment.xml
+++ b/app/src/main/res/layout/groups_fragment.xml
@@ -8,16 +8,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your Groups" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:text="Your Groups"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <GridView
             android:layout_width="match_parent"
